# pview

./: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.notls  Makefile  README.md  docker-compose.yml  repository.yaml
.github/workflows/: addon.yml  build.yml  pr.yml
addon/: Dockerfile  build.yaml  config.yaml
docs/superpowers/plans/: 2026-03-18-powerview-v3-api.md
docs/superpowers/specs/: 2026-03-18-powerview-v3-api-design.md  2026-07-19-smooth-interpolation-design.md
scripts/: apply-tag.sh  tag-release.sh
src/: api_types.rs  discovery.rs  hass_helper.rs  http_helpers.rs  hub.rs  main.rs
src/commands/: hub_info.rs  inspect_shade.rs  list_hubs.rs  list_scenes.rs  list_shades.rs  move_shade.rs  serve_mqtt.rs
