[package]
authors = ["Wez Furlong"]
repository = "https://github.com/benbraun/pview"
keywords = ["powerview", "home-automation"]
license = "MIT"
name = "pview"
version = "0.1.0"
edition = "2021"
description = "PowerView to MQTT bridge for Home Assistant"
build = "build.rs"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mqtt-tls"]
mqtt-tls = ["mosquitto-rs/vendored-mosquitto", "mosquitto-rs/vendored-mosquitto-tls"]
mqtt-no-tls = ["mosquitto-rs/vendored-mosquitto"]

[dependencies]
anyhow = "1.0.86"
arc-swap = "1.7.1"
async-channel = "2.3"
async-stream = "0.3"
bitflags = { version = "2.5.0", features = ["serde"] }
chrono = "0.4.38"
chrono-tz = "0.10.4"
clap = { version = "4.5.4", features = ["derive"] }
color-backtrace = "0.7.2"
dotenvy = "0.15.7"
env_logger = "0.11"
futures-util = "0.3"
iana-time-zone = "0.1.60"
log = "0.4.21"
reqwest = { version = "0.13.4", default-features=false, features = ["json", "stream"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_repr = "0.1.19"
tabout = "0.3.0"
thiserror = "2.0.18"
tokio = { version = "1.37.0", features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["rt", "macros", "time", "test-util"] }

[dependencies.wez-mdns]
version = "0.1.2"
#path = "../mdns"

[dependencies.mosquitto-rs]
version="0.11.2"
default-features = false
features = ["router"]
#path = "../mosquitto-rs/mosquitto-rs"
